athenad: fix memory leak in `_do_upload()` (#30237)
* fix memory leak

* test: stash

* clean up

* clean up

* ruff

* rm

* add py memory profiler

* test compress and no compress

* proper test

* comment

---------

Co-authored-by: Shane Smiskol <shane@smiskol.com>

(cherry picked from commit 61288dfe068e6127dcff64b8e7ac81844f7c31ff)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ pprofile = "*"
 pre-commit = "*"
 pycurl = "*"
 pygame = "*"
+pympler = "*"
 pyprof2calltree = "*"
 pytest = "*"
 pytest-xdist = "*"
