--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,63 @@
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--ignore=panda/ --ignore=rednose_repo/ --ignore=tinygrad_repo/ --ignore=laika_repo/"
+addopts = "--ignore=openpilot/ --ignore=cereal/ --ignore=opendbc/ --ignore=panda/ --ignore=rednose_repo/ --ignore=tinygrad_repo/ --ignore=laika_repo/ -Werror --strict-config --strict-markers --durations=10"
+#cpp_files = "test_*" # uncomment when agnos has pytest-cpp and remove from CI
 python_files = "test_*.py"
-timeout = "30"  # you get this long by default
+#timeout = "30"  # you get this long by default
+markers = [
+  "slow: tests that take awhile to run and can be skipped with -m 'not slow'",
+  "tici: tests that are only meant to run on the C3/C3X",
+]
+testpaths = [
+  "common",
+  "selfdrive/athena",
+  "selfdrive/boardd",
+  "selfdrive/car",
+  "selfdrive/controls",
+  "selfdrive/locationd",
+  "selfdrive/monitoring",
+  "selfdrive/thermald",
+  "selfdrive/test/longitudinal_maneuvers",
+  "system/hardware/tici",
+  "system/loggerd",
+  "system/proclogd",
+  "system/tests",
+  "system/ubloxd",
+  "tools/lib/tests",
+  "tools/replay",
+  "tools/cabana"
+]
+
+[tool.mypy]
+python_version = "3.11"
+plugins = [
+  "numpy.typing.mypy_plugin",
+]
+exclude = [
+  "body/",
+  "cereal/",
+  "opendbc/",
+  "panda/",
+  "laika/",
+  "laika_repo/",
+  "rednose/",
+  "rednose_repo/",
+  "tinygrad/",
+  "tinygrad_repo/",
+  "third_party/",
+]
+
+# third-party packages
+ignore_missing_imports=true
+
+# helpful warnings
+warn_redundant_casts=true
+warn_unreachable=true
+warn_unused_ignores=true
+
+# restrict dynamic typing
+warn_return_any=true
+
 
 [tool.poetry]
 name = "openpilot"
@@ -22,6 +77,7 @@ aiohttp = "*"
 aiortc = "*"
 casadi = "==3.6.3"
 cffi = "*"
+control = "*"
 crcmod = "*"
 cryptography = "*"
 Cython = "*"
@@ -35,11 +91,11 @@ numpy = "*"
 onnx = ">=1.14.0"
 onnxruntime = { version = ">=1.15.1", platform = "linux", markers = "platform_machine == 'aarch64'" }
 onnxruntime-gpu = { version = ">=1.15.1", platform = "linux", markers = "platform_machine == 'x86_64'" }
-pillow = "*"
 psutil = "*"
 pyaudio = "*"
 pycapnp = "*"
 pycryptodome = "*"
+pycurl = "*"
 pydub = "*"
 PyJWT = "*"
 pyopencl = "*"
@@ -53,11 +109,9 @@ setproctitle = "*"
 smbus2 = "*"
 sounddevice = "*"
 spidev = { version = "*", platform = "linux" }
-spidev2 = { version = "*", platform = "linux" }
 sympy = "*"
 timezonefinder = "*"
 tqdm = "*"
-urllib3 = "*"
 websocket_client = "*"
 polyline = "*"
 sconscontrib = {git = "https://github.com/SCons/scons-contrib.git"}
@@ -65,9 +119,9 @@ sconscontrib = {git = "https://github.com/SCons/scons-contrib.git"}
 
 [tool.poetry.group.dev.dependencies]
 av = "*"
-azure-storage-blob = "~2.1"
+azure-identity = "*"
+azure-storage-blob = "*"
 breathe = "*"
-carla = { url = "https://github.com/commaai/carla/releases/download/3.11.4/carla-0.9.14-cp311-cp311-linux_x86_64.whl", platform = "linux", markers = "platform_machine == 'x86_64'" }
 coverage = "*"
 dictdiffer = "*"
 ft4222 = "*"
@@ -76,6 +130,7 @@ inputs = "*"
 lru-dict = "*"
 markdown-it-py = "*"
 matplotlib = "*"
+metadrive-simulator = { git = "https://github.com/metadriverse/metadrive.git", rev ="72e842cd1d025bf676e4af8797a01e4aa282109f", markers = "platform_machine != 'aarch64'" } # no linux/aarch64 wheels for certain dependencies
 mpld3 = "*"
 mypy = "*"
 myst-parser = "*"
@@ -85,12 +140,18 @@ pandas = "*"
 parameterized = "^0.8"
 pprofile = "*"
 pre-commit = "*"
-pycurl = "*"
 pygame = "*"
 pympler = "*"
 pyprof2calltree = "*"
 pytest = "*"
+pytest-cov = "*"
+pytest-cpp = "*"
+pytest-subtests = "*"
 pytest-xdist = "*"
+pytest-timeout = "*"
+pytest-timeouts = "*"
+pytest-random-order = "*"
+ruff = "*"
 scipy = "*"
 sphinx = "*"
 sphinx-rtd-theme = "*"
@@ -103,8 +164,15 @@ types-pycurl = "*"
 types-PyYAML = "*"
 types-requests = "*"
 types-tabulate = "*"
-pyqt5 = "*"
 
+# this is only pinned since 5.15.11 is broken
+pyqt5 = { version = "==5.15.2", markers = "platform_machine == 'x86_64'" } # no aarch64 wheels for macOS/linux
+
+[tool.poetry.group.carla]
+optional = true
+
+[tool.poetry.group.carla.dependencies]
+carla = { url = "https://github.com/commaai/carla/releases/download/3.11.4/carla-0.9.14-cp311-cp311-linux_x86_64.whl", platform = "linux", markers = "platform_machine == 'x86_64'" }
 
 [build-system]
 requires = ["poetry-core"]
@@ -112,7 +180,7 @@ build-backend = "poetry.core.masonry.api"
 
 # https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
 [tool.ruff]
-select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A", "B"]
+select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF008", "RUF100", "A", "B", "TID251"]
 ignore = ["W292", "E741", "E402", "C408", "ISC003", "B027", "B024"]
 line-length = 160
 target-version="py311"
@@ -125,3 +193,9 @@ exclude = [
   "third_party",
 ]
 flake8-implicit-str-concat.allow-multiline=false
+[tool.ruff.flake8-tidy-imports.banned-api]
+"selfdrive".msg = "Use openpilot.selfdrive"
+"common".msg = "Use openpilot.common"
+"system".msg = "Use openpilot.system"
+"third_party".msg = "Use openpilot.third_party"
+"tools".msg = "Use openpilot.tools"
